src/objects/GoogleAuth__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Token__c</fullName>
        <label>Authorization Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry__c</fullName>
        <label>Expiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>gmail address of the user whose access token is being saved</description>
        <label>User Name</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>GoogleAuth</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>GoogleAuth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoogleAuth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>